hide search input before algolia loads to fix flicker

--- a/packages/theme-patternfly-org/layouts/sideNavLayout/sideNavLayout.css
+++ b/packages/theme-patternfly-org/layouts/sideNavLayout/sideNavLayout.css
@@ -39,7 +39,8 @@
   /* For icon */
   padding-left: 32px;
 }
-.ws-hide-search-input .algolia-autocomplete {
+.ws-hide-search-input .algolia-autocomplete,
+.ws-hide-search-input #global-search-input {
   display: none !important;
   width: 0;
 }
